# steam-screip

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  logging_config.py  main.py  models.py  notifier.py  parser.py  scraper.py  utils.py
tests/: test_database.py  test_logging_config.py  test_notifier.py  test_parser.py  test_utils.py
tests/fixtures/: steamdb.html
