[project]
name = "steam-screip"
version = "0.1.0"
description = "Scrape 100% discounted Steam games from SteamDB and notify via Discord"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.15",
    "lxml>=5.0",
    "tinydb>=4.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "tenacity>=9.0",
    "tzdata>=2026.2",
]

[project.scripts]
steam-screip = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
